--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -500,30 +500,29 @@
         state: started
         enabled: yes
       tags: php_fpm_service_start
-    - name: download redis-7.4.2
-      get_url:
-        url: https://download.redis.io/releases/redis-7.4.2.tar.gz
-        dest: "{{ software_src_path }}/redis-7.4.2.tar.gz"
-      delegate_to: localhost
-      run_once: true
-      tags: download_redis_7_4_2
-    - name: copy redis-7.4.2.tar.gz
-      ansible.builtin.copy:
-        src: "{{ software_src_path }}/redis-7.4.2.tar.gz"
-        dest: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
-      tags: copy_redis
-    - name: redis-unarchive
-      unarchive:
-        src: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
-        dest: "{{ software_dest_path }}"
-        remote_src: yes
-      tags: redis_unarchive
-    - name: redis server compile
-      shell: make USE_SYSTEMD=yes && make install
-      args:
-        chdir: "{{ software_dest_path }}/redis-7.4.2"
-      tags: redis_server_compile
-#### TODO
+#    - name: download redis-7.4.2
+#      get_url:
+#        url: https://download.redis.io/releases/redis-7.4.2.tar.gz
+#        dest: "{{ software_src_path }}/redis-7.4.2.tar.gz"
+#      delegate_to: localhost
+#      run_once: true
+#      tags: download_redis_7_4_2
+#    - name: copy redis-7.4.2.tar.gz
+#      ansible.builtin.copy:
+#        src: "{{ software_src_path }}/redis-7.4.2.tar.gz"
+#        dest: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
+#      tags: copy_redis
+#    - name: redis-unarchive
+#      unarchive:
+#        src: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
+#        dest: "{{ software_dest_path }}"
+#        remote_src: yes
+#      tags: redis_unarchive
+#    - name: redis server compile
+#      shell: make USE_SYSTEMD=yes && make install
+#      args:
+#        chdir: "{{ software_dest_path }}/redis-7.4.2"
+#      tags: redis_server_compile
     - name: download redis-5.0.3
       get_url:
         url: https://download.redis.io/releases/redis-5.0.3.tar.gz
@@ -531,7 +530,22 @@
       delegate_to: localhost
       run_once: true
       tags: download_redis_5_0_3
-####
+    - name: copy redis-5.0.3.tar.gz
+      ansible.builtin.copy:
+        src: "{{ software_src_path }}/redis-5.0.3.tar.gz"
+        dest: "{{ software_dest_path }}/redis-5.0.3.tar.gz"
+      tags: copy_redis
+    - name: redis-unarchive
+      unarchive:
+        src: "{{ software_dest_path }}/redis-5.0.3.tar.gz"
+        dest: "{{ software_dest_path }}"
+        remote_src: yes
+      tags: redis_unarchive
+    - name: redis server compile
+      shell: make USE_SYSTEMD=yes && make install
+      args:
+        chdir: "{{ software_dest_path }}/redis-5.0.3"
+      tags: redis_server_compile
     - name: redis service create
       ansible.builtin.copy:
         dest: /etc/systemd/system/redis.service
@@ -593,12 +607,6 @@
         regexp: 'bind 127.0.0.1 -::1'
         replace: 'bind 127.0.0.1'
       tags: edit_redis_config_bind
-    #- name: edit redis config daemonize
-    #  ansible.builtin.replace:
-    #    path: /etc/redis.conf
-    #    regexp: 'daemonize no'
-    #    replace: 'daemonize yes'
-    #  tags: edit_redis_config_daemonize
     - name: edit redis config supervised
       ansible.builtin.replace:
         path: /etc/redis.conf
