--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -3,3 +3,6 @@
 192.168.152.122 custom_hostname=poxappprd52c src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52c_06A30E/poxappprd52c.key
 192.168.152.123 custom_hostname=poxappprd52d src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52d_06A30F/poxappprd52d.key
 192.168.152.124 custom_hostname=poxappprd52e src_ssl_crt=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.crt src_ssl_key=ssl/poxappprd52a-52g/poxappprd52e_06A310/poxappprd52e.key
+[other_prod]
+172.24.150.146 custom_hostname=poxappprd52f
+172.24.150.147 custom_hostname=poxappprd52g
