--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -695,6 +695,8 @@
           vm.overcommit_memory = 1
           net.core.somaxconn = 512
           net.ipv4.icmp_echo_ignore_all = 0
+          fs.file-max = 1000000
+          net.ipv4.tcp_max_tw_buckets = 2000000
         marker: "#### {mark} ADDED BY OPP INSTALLATION ####"
         backup: yes
         state: present
