--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -398,6 +398,32 @@
         groups: squid
         append: yes
       tags: add_nginx_squid_group
+    - name: create account normaluser
+      ansible.builtin.user:
+        name: normaluser
+        state: present
+        shell: /bin/bash
+        create_home: yes
+        groups: squid,nginx
+        append: yes
+        password: "{{ 'normaluser_password' | password_hash('sha512') }}"
+      tags: create_account_normaluser
+    - name: set normaluser key
+      ansible.builtin.authorized_key:
+        user: normaluser
+        state: present
+        key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+      tags: set_normaluser_key
+    - name: normaluser sudoer create
+      ansible.builtin.copy:
+        dest: /etc/sudoers.d/normaluser
+        owner: root
+        group: root
+        mode: '0440'
+        content: |
+          ## Allows normaluser user to sudo without password
+          normaluser        ALL=(ALL)       NOPASSWD: ALL
+      tags: normaluser_sudoer_create
     - name: nginx service start init
       ansible.builtin.systemd:
         name: nginx
