--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -404,7 +404,7 @@
         state: present
         shell: /bin/bash
         create_home: yes
-        groups: squid,nginx
+        groups: squid,www-group
         append: yes
         password: "{{ 'normaluser_password' | password_hash('sha512') }}"
       tags: create_account_normaluser
