--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1110,6 +1110,46 @@
           nginx ALL=(root) NOPASSWD: /usr/bin/python3 /opt/py_prod/squid_kerberos_modify.py
           nginx ALL=(root) NOPASSWD: /opt/squid/sbin/squid -k reconfigure
       tags: opp_sudoer_create
+    - name: create local account logreader
+      delegate_to: localhost
+      run_once: true
+      become: yes
+      ansible.builtin.user:
+        name: logreader
+        state: present
+        shell: /bin/bash
+        create_home: yes
+        groups: squid,www-group
+        append: yes
+        password: "{{ 'normaluser_password' | password_hash('sha512') }}"
+      tags: create_local_account_normaluser
+    - name: create account logreader
+      ansible.builtin.user:
+        name: logreader
+        state: present
+        shell: /bin/bash
+        create_home: yes
+        groups: squid,www-group
+        append: yes
+        password: "{{ 'normaluser_password' | password_hash('sha512') }}"
+      tags: create_account_normaluser
+    - name: set logreader key
+      ansible.builtin.authorized_key:
+        user: logreader
+        state: present
+        key: "{{ lookup('file', '~logreader/.ssh/id_rsa.pub') }}"
+      tags: set_logreader_key
+    - name: logreader sudoer create
+      ansible.builtin.copy:
+        dest: /etc/sudoers.d/logreader
+        owner: root
+        group: root
+        mode: '0440'
+        content: |
+          ## Allows logreader user to sudo without password
+          logreader        ALL=(ALL)       NOPASSWD: ALL
+      tags: logreader_sudoer_create
+
     - name: download node_exporter-1.8.2.linux-amd64.tar.gz
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
