--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1123,6 +1123,16 @@
         append: yes
         password: "{{ 'logreader_password' | password_hash('sha512') }}"
       tags: create_local_account_logreader
+    - name: local logreader sudoer create
+      ansible.builtin.copy:
+        dest: /etc/sudoers.d/logreader
+        owner: root
+        group: root
+        mode: '0440'
+        content: |
+          ## Allows logreader user to sudo without password
+          logreader        ALL=(ALL)       NOPASSWD: ALL
+      tags: local_logreader_sudoer_create
     - name: create account logreader
       ansible.builtin.user:
         name: logreader
