--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1170,7 +1170,7 @@
         state: present
         key: "{{ lookup('file', '~logreader/.ssh/id_rsa.pub') }}"
       tags: set_logreader_key
-    - name: logreader sudoer create
+    - name: create logreader sudoer
       ansible.builtin.copy:
         dest: /etc/sudoers.d/logreader
         owner: root
@@ -1179,7 +1179,7 @@
         content: |
           ## Allows logreader user to sudo without password
           logreader        ALL=(ALL)       NOPASSWD: ALL
-      tags: logreader_sudoer_create
+      tags: create_logreader_sudoer
     - name: download node_exporter-1.8.2.linux-amd64.tar.gz
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
