--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -46,27 +46,30 @@
         password: "{{ 'logreader_password' | password_hash('sha512') }}"
       tags: local_create_account_logreader
     - name: local create logreader ssh
+      delegate_to: localhost
+      become: yes
+      become_user: logreader
+      run_once: true
       ansible.builtin.file:
         path: "~/.ssh"
         state: directory
         mode: '0700'
         owner: logreader
+      tags: local_create_logreader_ssh
+    - name: local logreader keygen
       delegate_to: localhost
       become: yes
       become_user: logreader
       run_once: true
-      tags: local_create_logreader_ssh
-    - name: local logreader keygen
       community.crypto.openssh_keypair:
         path: "~/.ssh/id_rsa"
         type: rsa
         size: 2048
+      tags: local_logreader_keygen
+    - name: local create logreader sudoer
       delegate_to: localhost
       become: yes
-      become_user: logreader
       run_once: true
-      tags: local_logreader_keygen
-    - name: local logreader sudoer create
       ansible.builtin.copy:
         dest: /etc/sudoers.d/logreader
         owner: root
@@ -75,7 +78,7 @@
         content: |
           ## Allows logreader user to sudo without password
           logreader        ALL=(ALL)       NOPASSWD: ALL
-      tags: local_logreader_sudoer_create
+      tags: local_create_logreader_sudoer
     - name: ping
       ping:
       tags: ping_hosts
