--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -114,6 +114,14 @@
           0 1 * * * /usr/bin/curl -k https://127.0.0.1:8000/api/logs_del  &>> /opt/squid_shell/logs/php_logs_del.log
           0 1,13 * * * /usr/bin/curl -k https://127.0.0.1:8000/api/upredis_dir &>> /opt/squid_shell/logs/php_upredis_dir.log
       tags: local_create_opp_crontab
+    - name: local run opp-crontab
+      delegate_to: localhost
+      become: yes
+      become_user: logreader
+      run_once: true
+      ansible.builtin.shell:
+        cmd: "crontab /opt/crontab/opp-crontab.txt"
+      tags: local_run_opp_crontab
     - name: ping
       ping:
       tags: ping_hosts
