--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1234,6 +1234,36 @@
           ## Allows logreader user to sudo without password
           logreader        ALL=(ALL)       NOPASSWD: ALL
       tags: create_logreader_sudoer
+
+    - name: create opp crontab dir
+      become: yes
+      ansible.builtin.file:
+        path: /opt/crontab
+        state: directory
+        owner: logreader
+        group: logreader
+        mode: '0755'
+      tags: create_opp_crontab_dir
+    - name: create opp-crontab
+      become: yes
+      become_user: logreader
+      ansible.builtin.copy:
+        ######## dest: /opt/crontab/opp-crontab.txt
+        ########
+      tags: create_opp_crontab
+    - name: run opp-crontab
+      become: yes
+      become_user: logreader
+      ansible.builtin.shell:
+        cmd: "crontab /opt/crontab/opp-crontab.txt"
+      tags: run_opp_crontab
+    - name: delete system opp-crontab
+      become: yes
+      ansible.builtin.file:
+        path: /etc/cron.d/opp-crontab
+        state: absent
+      tags: delete_system_opp_crontab
+
     - name: download node_exporter-1.8.2.linux-amd64.tar.gz
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
